# microboard

./: .editorconfig  .env  .gitignore  Dockerfile  Makefile  docker-compose.yml  flake.nix  generate_favicons.sh  go.mod  go.sum  main.go  readme.md
.github/: dependabot.yml
.github/workflows/: docker.yml
api/: errors.go  main.go  pagination.go  posts.go  threads.go
api/views/: admin.go  auth.go  boards.go  errors.go  index.go  posts.go  render.go  threads.go
assets/: openapi.json
assets/css/: admin.css  auth.css  base.css  board.css  fileviewer.css  index.css  post.css  thread.css
assets/js/: board-editor.js  board.js  fileviewer.js  thread.js
assets/swagger/: index.html
backend/: .env  Cargo.toml  docker-compose.yml
backend/src/: api.rs  backend.rs  config.rs  error.rs  main.rs  state.rs
backend/src/api/: boards.rs  files.rs  posts.rs  threads.rs
backend/src/backend/: boards.rs  jwt.rs  migrations.rs  posts.rs  threads.rs  users.rs
captcha/: generator.go
cmd/api/: Dockerfile  main.go
cmd/migrator/: Dockerfile  main.go
config/: config.go
database/: boards.go  connection.go  files.go  migrations.go  posts.go  threads.go  users.go
db/: connection.go  migrations.go
frontend/: index.html  package-lock.json  package.json
http/: main.go
migrations/: 000005_create_admins.up.sql
nginx-conf-dev/: default.conf
src/: .env  go.mod  go.sum  main.go
storage/: main.go  previews.go  writer.go
templates/: admin.html.tmpl  auth.html.tmpl  board.html.tmpl  error.html.tmpl  fileviewer.html.tmpl  head.html.tmpl  index.html.tmpl  thread.html.tmpl
(+90 files in other folders)
