[package]
name = "nullchan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
dotenvy = "0.15.7"
anyhow = "1.0.71"
futures = "0.3.28"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"

[profile.release]
strip = "debuginfo"
